<resources>
    <string name="app_name">Mkjli</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="helloarab">صباح الخير</string>
    <string name="nameuser">يونس</string>
    <string name="malid">مرضاي</string>
    <string name="patient_sivant">المريض التالي</string>
    <string name="sdfg">مواعيدي</string>
    <string name="more">المزيد</string>
    <string name="طبيبي">طبيبي</string>
    <string name="ادويتي">ادويتي</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="timeheur">11:00 - 12:30</string>
    <string name="jour">15 May</string>
    <string name="nomdoctor">د. نورالدين هيثم</string>
    <string name="spisia">طبيب الانف والحنجرة</string>
    <string name="rating">5</string>
    <string name="namedacor">د. نورالدين هيثم</string>
    <string name="spicaliter">طبيب الانف والحنجرة</string>
    <string name="maw9it">المواقيت</string>
    <string name="dateer">التاريخ</string>
    <string name="datachifr">15</string>
    <string name="desing">|</string>
    <string name="march">Mars</string>
    <string name="dafvas">11:00 - 12:00</string>
    <string name="hisabi">حسابي</string>
    <string name="mwa3idi">مواعيدي</string>
    <string name="وصفاتي">وصفاتي</string>
    <string name="home">Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asdasd">د. نورالدين هيثم</string>
    <string name="asdffz">مرحبا كيف حالك</string>
    <string name="sa3a">4:00 PM</string>
    <string name="dardacha">الدردشة</string>
    <string name="nomn">الاسم</string>
    <string name="spicia">التخصص</string>
    <string name="liew">المكان</string>
    <string name="swtif">طانجة - سطيف</string>
    <string name="sifatk">اختر صفتك</string>
    <string name="tabib">طبيب</string>
    <string name="tabibi">طبيب</string>
    <string name="tabiib">طبيب</string>
    <string name="marid">مريض</string>
    <string name="title_activity_login_doctor">Login_doctor</string>
    <string name="title_activity_main_doctor">MainActivityDoctor</string>
    <string name="p4rix">1500</string>
    <string name="da">DA</string>
    <string name="maladnom">يونس رجم</string>
    <string name="phonee">0663817570</string>
    <string name="maridtali">المريض التالي</string>
    <string name="f7osat">فحوصات</string>
    <string name="fa7s">الفحص :</string>
    <string name="marad3adi">مرض عادي</string>
    <string name="remarquie">ملاحظات</string>
    <string name="register">Register</string>
    <string name="wilaya">الولاية:</string>
    <string name="taa">التخصص :</string>
    <string name="hjaskd">بحث ...</string>
    <string name="fillter">FILTRE</string>
    <string name="typeconsult">نوع الفحص</string>
    <string name="ppp">DA</string>
    <string name="jourd">"يوم: "</string>
    <string name="cancleall">الغاء الكل</string>
    <string name="canclerrdcv">الغاء الموعد</string>
    <string name="jours">الايام</string>
    <string name="dvs">التوقيت</string>
    <string name="sca">اليوم</string>

</resources>