<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFEFE"
    tools:context=".ui.add.AddFragment">

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_cherchmedcin"
        android:drawableStart="@drawable/search_svgrepo_com"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="ابحث عن طبيبك.. مرضك.. احتياجك"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="#000000"
        android:textColorHint="#636363"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSpecialite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <!-- Spinner for doctor's specialty -->

    <!-- Spinner for wilaya -->

    <Spinner
        android:id="@+id/spinnerSpecialite"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_cherchmedcin"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <Spinner
        android:id="@+id/spinnerWilaya"
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_cherchmedcin"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSpecialite" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/wilaya"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toEndOf="@+id/spinnerWilaya"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/taa"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/spinnerSpecialite"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <TextView
        android:id="@+id/textView23x"
        android:layout_width="369dp"
        android:layout_height="35dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/forrecherch"
        android:gravity="center"
        android:text="@string/hjaskd"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
